# masketeers

./: .cruft.json  README.md  Test_gradientboostingclassifier_20250902-150041.pkl  Test_gradientboostingclassifier_A488_alone-20250902-220221.pkl  Test_gradientboostingclassifier_A568_alone-20250905-013046.pkl  Test_gradientboostingclassifier_DAPI_alone-20250902-221200.pkl  Test_gradientboostingclassifier_DAPI_alone-joined_dataset-20250902-201042.pkl  pyproject.toml
notebooks/: A_LSS_01_cropping.ipynb  A_LSS_02_data-inspect-after_merging-zarr.ipynb  A_LSS_04_Predictions-Cellpose.ipynb  A_LSS_06_Validation_Stardist.ipynb  A_LSS_08_Predictions_Stardist.ipynb  A_LSS_09_Metrics-Stardist.ipynb  A_LSS_10_Mask-dilation.ipynb  A_LSS_11_Marker-channel-Zarr.ipynb  A_LSS_12_Making-ring.ipynb  A_LSS_13-Choosing-threshold for category.ipynb  A_LSS_15_Making-ring-mask.ipynb  A_LSS_16_Annotating-marker-channel.ipynb  CP-data-csv-to-pandas.ipynb  CP-image-cropping.ipynb  CP-measurements.ipynb  LDM-CP-to-zarr.ipynb  LDM-TIFF-to-zarr.ipynb  LDM-data-loader.ipynb  LDM-notebook-nucleoli-resnet.ipynb  Nuclei_centroid_crop.ipynb  Nuclei_segmentation_stardist.ipynb  class_dataloader_dm.ipynb  classification_dataloader.ipynb  classification_prep.ipynb  improving_segmentation.ipynb  joined_data_top10features.csv  masketeers.code-workspace  model_eval.ipynb  napari-viewer.ipynb  nft_dataloader.ipynb  nft_np_zarr.ipynb  nft_pb_dataloader.ipynb  nucleolar_classifier_exploration.ipynb  preprocess_dm.ipynb  storage_zarr_gen_dm.ipynb  zarr_napari_inspection.ipynb  zarr_on_nft.ipynb
(+33 files in other folders)
