[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "Masketeers"
description = "2D segmentation and classification"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "diazmartinez@gonzaga.edu ", name = "4 Masketeers " },
]
dynamic = ["version"]
dependencies = [
    "torch",
    "torchvision",
    "scikit-learn",
    "zarr",
    "matplotlib",
    "imageio",
    "ome-zarr",
    "dlmbl_unet@git+https://github.com/dlmbl/dlmbl-unet",
    "napari[all]",

    
    
]